release/scripts/startup/bl_operators/node.py
@@ -66,12 +66,8 @@ class NodeAddOperator():
 
         # convert mouse position to the View2D for later node placement
         if context.region.type == 'WINDOW':
-            # XXX, temp fix for [#35920], still fails for (U.pixelsize != 1)
-            dpi_fac = context.user_preferences.system.dpi / 72.0
-            space.cursor_location = v2d.region_to_view(event.mouse_region_x,
-                                                       event.mouse_region_y)
-            space.cursor_location /= dpi_fac
-
+            # convert mouse position to the View2D for later node placement
+            space.cursor_location_from_region(event.mouse_region_x, event.mouse_region_y) 
         else:
             space.cursor_location = tree.view_center
 
